YAML FOLDER/Deployment .yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymentkhalid
spec:
  replicas: 2
  selector:
    matchLabels:
      app: countries-khalid  
  template:
    metadata:
      labels:
        app: countries-khalid  
    spec:
      containers:
      - name: kokodb
        image: kokodb.azurecr.io/databasecountries:latest
      imagePullSecrets:
      - name: acr-secret
