YAML FOLDER/Service Configuration.yaml
apiVersion: v1
kind: Service
metadata:
  name: countrieskhalid-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: countries-khalid
