YAML FOLDER/Netpolicy .yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: default 
spec:
  podSelector:
    matchLabels:
      app: countries-khalid  
      role: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: countries-khalid  
          role: frontend
    ports:
    - protocol: TCP
      port: 80
